[tool.poetry]
name = "sayaluminum"
version = "0.1.0"
description = ""
authors = ["nicolvisser <nicolvisser@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xformers = "^0.0.26.post1"
tokenizers = "^0.19.1"
h5py = "^3.11.0"
lightning = "^2.2.5"
transformer-engine = "^0.0.0"
einops = "^0.8.0"
soundfile = "^0.12.1"
simple-parsing = "^0.1.5"
torchaudio = "^2.0.0"
click = "^8.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.1"
matplotlib = "^3.9.0"
ipykernel = "^6.29.4"
tensorboard = "^2.16.2"
tensorboardx = "^2.6.2.2"
pandas = "^2.2.2"
python-Levenshtein = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"